# trading-agent

./: .dockerignore  .gitattributes  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  .secrets.baseline  AGENTS.md  CHANGELOG.md  CLAUDE.md  Dockerfile  INSTALLATIEGIDS.md  SECURITY.md  VERSION  __init__.py  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  pytest.ini  requirements.txt  researchctl.py  run.py
.claude/: settings.json
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
agent/: runtime_config.py
artifacts/: .gitkeep  build_provenance.schema.json
automation/: __init__.py  live_gate.py
config/: config.template.yaml  config.yaml
dashboard/: api_agent_control.py  api_agent_control_activity.py  api_approval_inbox.py  api_approval_token_gate.py  api_campaigns.py  api_execute_safe_controls.py  api_merge_execution_dry_run.py  api_merge_execution_simulate.py  api_merge_preflight.py  api_merge_recommendation.py  api_mobile_approval_inbox.py  api_observability.py  api_proposal_queue.py  api_push_dispatch.py  api_push_subscribe.py  api_pwa_static.py  api_research_intelligence.py  api_roadmap_priority.py  api_system_meta.py  dashboard.py  research_artifacts.py  research_runner.py
data/: __init__.py  contracts.py  repository.py
docs/: RESEARCH_CONTEXT.md  funnel_spawn_proposer_design.md  orchestrator_brief.md  qre_candidate_diversity_validation_operator_report.md  qre_controlled_328_discovery_grid_vps_runbook.md  qre_equities_universe_preset_expansion_plan.md  qre_frontend_redesign_report.md  qre_observability_runbook.md  research_intelligence_layer.md
execution/: __init__.py  protocols.py
frontend/: .gitignore  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
orchestration/: __init__.py  executor.py  orchestrator.py  queue.py  scheduler.py  task.py  worker.py
reporting/: __init__.py  adaptive_research_learning_minimal.py  ade_queue_status_self_audit.py  agent_audit.py  agent_audit_summary.py  agent_flow.py  approval_inbox.py  approval_policy.py  approval_token_gate.py  approval_token_runtime.py  architecture_import_scan.py  audit_log.py  autonomous_backlog_summary.py  autonomous_dev_readiness.py  autonomous_dev_readiness_blockers.py  autonomous_pr_runner.py  autonomous_workloop.py  autonomy_metrics.py  control_plane_qre_adapter_contract.py  development_agent_activity_timeline.py  development_bugfix_loop.py  development_delegation.py  development_e2e_proof.py  development_generated_lane.py  development_generated_lane_a18c.py  development_generated_lane_promotion_report.py  development_generated_lane_writer.py  development_intake_promotion.py  development_intake_promotion_status.py  development_merge_preflight.py  development_merge_recommendation.py  development_operational_digest.py  development_pr_lifecycle_observer.py  development_queue_admission_policy.py  development_queue_admission_policy_status.py  development_release_gate.py  development_release_gate_status.py  development_roadmap_intake.py  development_roadmap_intake_status.py  development_roadmap_progress.py  (+130 more)
research/: _oos_stream.py  _sidecar_io.py  asset_typing.py  authority_trace.py  authority_views.py  batch_execution.py  batching.py  campaign_budget.py  campaign_digest.py  campaign_evidence_decision.py  campaign_evidence_ledger.py  campaign_family_policy.py  campaign_followup.py  campaign_funnel_policy.py  campaign_invariants.py  campaign_launcher.py  campaign_lease.py  campaign_level_evidence.py  campaign_os_artifacts.py  campaign_policy.py  campaign_preregistered_multiwindow_evidence_run.py  campaign_preregistered_sampling_plan.py  campaign_preset_policy.py  campaign_queue.py  campaign_registry.py  campaign_templates.py  campaigns.py  candidate_lifecycle.py  candidate_pipeline.py  candidate_registry_v2.py  candidate_resume.py  candidate_returns_feed.py  candidate_scoring.py  candidate_sidecars.py  candidate_status_history.py  candidate_timestamped_returns_feed.py  controlled_discovery_grid.py  controlled_discovery_grid_execution.py  controlled_eval.py  dead_zone_detection.py  (+204 more)
scripts/: ci_path_classifier.py  deploy.sh  deploy_vps_dashboard.sh  emit_build_provenance.py  governance_lint.py  push_body_safety_lint.py  qre_closed_loop_e2e_verify.ps1  release_gate_checklist_runner.py  test_local.ps1  test_targeted.ps1
tests/: _harness_helpers.py  conftest.py  run_tests.sh
tools/: qre_architecture_impact_report.py  qre_build_backend_adapter.py  (+4 more)
(+1547 files in other folders)
